# Audio-Plugin-Template

./: CMakeLists.txt  README.md
PluginTemplate/: CMakeLists.txt
PluginTemplate/src/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
config/: config.py
plugin/: CMakeLists.txt
